Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
         </td>
         <td class="cell_img">
-          <img src="img/nền nhạc tết.jpg" class="img">
+          <img src="img/nennhactet.jpg" class="img">
         </td>
       </tr>
     <tr>
