--- a/nhactet.html
+++ b/nhactet.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="banner">
-      <h1>Câu lạc bộ ngoại khóa Trường Vĩnh Trạch</h1>
+      <h1>Tết Nguyên Đán</h1>
     </div>
     <div class="slogan">
       <div class="row">
